Text cutting off in IE9 fix

--- a/_less/main.less
+++ b/_less/main.less
@@ -383,7 +383,7 @@ body > header {
         form{
             .zero; padding: 25px;
             input[type=text]{
-                height:38px; border: 1px solid #dee1e5; width: 100%; border-radius: 4px; box-sizing: border-box; padding: 14px; .font-size(14); outline: 0;
+                height:38px; border: 1px solid #dee1e5; width: 100%; border-radius: 4px; box-sizing: border-box; padding: 0 14px; .font-size(14); outline: 0;
                     
                 &::-webkit-input-placeholder {
                     color: #bec3cc;
